# verri

./: .gitignore  README.md  pylock.toml  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: conftest.py  test_dates.py  test_environments.py  test_flavours.py  test_git.py  test_version_annotation.py  test_versions.py
tests/repos/: README.md
verri/: __init__.py  dates.py  environments.py  errors.py  git.py  tasty.py
very/: __init__.py  environments.py  git.py  tasty.py  versions.py
