[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "very"
version = "2026.3.29"
description = "Very version, such simple, wow"
authors = [
    {name = "Mattijs Ugen", email = "144798+akaIDIOT@users.noreply.github.com"},
]
dependencies = [
    "packaging>=26.0"
]
requires-python = ">=3.10"
license = {text = "EUPL-1.2"}

[dependency-groups]
check = [
    "ruff",
    "rumdl",
]
test = [
    "coverage",
    "pytest",
]

[tool.pdm.scripts]
all = {composite = [
    "check",
    "test",
]}
check = {composite = [
    "pdm lock --check",
    "ruff format --diff very/ tests/",
    "ruff check very/ tests/",
    "rumdl check README.md",
]}
fix = {composite = [
    "ruff format very/ tests/",
    "ruff check --fix very/ tests/",
    "rumdl check --fix README.md",
]}
test = {composite = [
    "coverage run --branch --source very --module pytest tests/",
    "coverage report",
]}

[tool.ruff]
format.quote-style = "single"
lint.flake8-quotes.inline-quotes = "single"
line-length = 120
lint.isort.lines-after-imports = 2
lint.select = [
    "E", "F", "I", "Q", "RUF100", "RUF101", "UP",
]

[tool.rumdl]
line-length = 120
