[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "verri"
version = "2026.3.29"
description = "Verri version, such flavour, wow"
authors = [
    {name = "Mattijs Ugen", email = "144798+akaIDIOT@users.noreply.github.com"},
]
dependencies = [
    "packaging>=26.0"
]
requires-python = ">=3.10"
license = {text = "EUPL-1.2"}

[dependency-groups]
check = [
    "ruff",
    "rumdl",
]
test = [
    "coverage",
    "pytest",
]

[tool.pdm.scripts]
all = {composite = [
    "check",
    "test",
]}
check = {composite = [
    "pdm lock --check",
    "ruff format --diff verri/ tests/",
    "ruff check verri/ tests/",
    "rumdl check README.md",
]}
fix = {composite = [
    "ruff format verri/ tests/",
    "ruff check --fix verri/ tests/",
    "rumdl check --fix README.md",
]}
test = {composite = [
    "coverage run --branch --source verri --module pytest tests/",
    "coverage report",
]}

[tool.ruff]
format.quote-style = "single"
lint.flake8-quotes.inline-quotes = "single"
line-length = 120
lint.isort.lines-after-imports = 2
lint.select = [
    "E", "F", "I", "Q", "RUF100", "RUF101", "UP",
]

[tool.rumdl]
line-length = 120

[tool.rumdl.MD013]
reflow = true
