[project]
name = "verri"
version = "2026.3.29"
description = "Verri version, such flavour, wow"
readme = "README.md"
authors = [
    {name = "Mattijs Ugen", email = "144798+akaIDIOT@users.noreply.github.com"},
]
dependencies = [
    "packaging>=26.0"
]
requires-python = ">=3.10"
license = {text = "EUPL-1.2"}

[project.urls]
homepage = "https://github.com/akaIDIOT/verri/"
source = "https://github.com/akaIDIOT/verri/"

[dependency-groups]
check = [
    "ruff",
    "rumdl",
]
test = [
    "coverage",
    "pytest",
]

[tool.pdm.scripts]
all = {composite = [
    "check",
    "test",
]}
check = {composite = [
    "pdm lock --check",
    "ruff format --diff verri/ tests/",
    "ruff check verri/ tests/",
    "rumdl check README.md",
]}
fix = {composite = [
    "ruff format verri/ tests/",
    "ruff check --fix verri/ tests/",
    "rumdl check --fix README.md",
]}
test = {composite = [
    "coverage run --branch --source verri --module pytest tests/",
    "coverage report",
]}

[tool.ruff]
format.quote-style = "single"
lint.flake8-quotes.inline-quotes = "single"
line-length = 120
lint.isort.lines-after-imports = 2
lint.select = [
    "E", "F", "I", "Q", "RUF100", "RUF101", "UP",
]

[tool.rumdl]
line-length = 120

[tool.rumdl.MD013]
reflow = true

[build-system]
# NB: using pdm-backend's own trick to allow a project depend on itself during a build
#     normally, verri should be added to the requires field and the build-backend should be "pdm.backend"
requires = ["pdm-backend"]
build-backend = "pdm.backend.intree"
